[package]
name = "reprisedb_load_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
plotters = "0.3.4"
rand = "0.8.5"
#reprisedb = { git = "https://github.com/emersonmde/reprisedb", branch = "main" }
reprisedb = { path = "../reprisedb" }
tokio = { version = "1.28.2", features = ["full"] }
